<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Picture Capture</string>
    <string name="action_settings">Settings</string>
    <string name="lblWebPictureCapture">Web Picture Capture</string>
    <string name="btnBrowseWebForPics">Browse web for pics</string>
    <string name="btnDownloadByURL">Download by URL</string>
    <string name="btnBrowseLocalGalery">Browse local galery</string>
    <string name="lblEnterURL">Enter URL with a PNG, GIF or JPEG picture</string>
    <string name="lblEnterURLHere">Enter URL here</string>
    <string name="lblDownloadProgress">Download progress</string>
    <string name="lblDownloadOn">Download on</string>
    <string name="lblOriginURL">Origin URL was</string>
    <string name="title_activity_web_browser">Web Browser Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_download_by_url">Download By URL Activity</string>
    <string name="title_activity_picture_gallery">Picture Gallery Activity</string>
    <string name="title_activity_single_picture">Single Picture Activity</string>

</resources>